# HelloPlugin

./: CMakeLists.txt  README.md
.github/: HelloPlugin-test.yml
.github/workflows/: Thunder-4.4.3-HelloPlugin-test.yml  Thunder-5.2-HelloPlugin-test.yml  Thunder-5.3-HelloPlugin-test.yml
.github/workflows/script/: generate_memory_report.py
plugin/: CMakeLists.txt  HelloPlugin.conf.in  HelloPlugin.config  HelloPlugin.cpp
script/: generate_memory_report.py
